@@ -309,12 +309,10 @@ iq_disco(Lang) ->
       [{"category", "conference"},
        {"type", "irc"},
        {"name", translate:translate(Lang, "IRC Transport")}], []},
-     {xmlelement, "feature",
-      [{"var", ?NS_MUC}], []},
-     {xmlelement, "feature",
-      [{"var", ?NS_REGISTER}], []},
-     {xmlelement, "feature",
-      [{"var", ?NS_VCARD}], []}].
+     {xmlelement, "feature", [{"var", ?NS_DISCO_INFO}], []},
+     {xmlelement, "feature", [{"var", ?NS_MUC}], []},
+     {xmlelement, "feature", [{"var", ?NS_REGISTER}], []},
+     {xmlelement, "feature", [{"var", ?NS_VCARD}], []}].
 
 iq_get_vcard(Lang) ->
     [{xmlelement, "FN", [],
